feat: basic syntax highlight, error highlight